--- a/web-frontend/public/index.css
+++ b/web-frontend/public/index.css
@@ -72,6 +72,7 @@ body * {
   --tag: rgba(255, 255, 255, 1);
   --analytics-card: rgba(255, 255, 255, 1);
   --fancy-heading-color: rgba(68, 68, 68, 1);
+  --fancy-heading-color: #0f2e5d;
   --input-box-background: rgba(248, 248, 248, 1);
   --select-box-alt-color: transparent;
 
