--- a/web-frontend/src/pages/exkey/exkey.css
+++ b/web-frontend/src/pages/exkey/exkey.css
@@ -42,6 +42,15 @@
   height: 420px;
 }
 
+@media only screen and (max-width: 1500px) {
+  .card-left {
+    margin-left: 23%;
+  }
+  .card-right {
+    margin-left: 23%;
+  }
+}
+
 @media only screen and (max-width: 500px) {
   .card-left {
     width: 300px;
@@ -240,10 +249,26 @@
   }
 }
 
+@keyframes startbtn-effect_analyzeAgain {
+  0% {
+    left: 5.3%;
+  }
+  50% {
+    left: 20%;
+  }
+
+  100% {
+    left: 5.3%;
+  }
+}
+
 .analyze_again {
-  margin-top: 27%;
-  margin-left: 78.5%;
+  margin-top: 25%;
+  margin-left: 48%;
   position: absolute;
+  animation-name: startbtn-effect_analyzeAgain;
+  animation-duration: 3s;
+  animation-iteration-count: 2;
 }
 
 @media only screen and (max-width: 1500px) {
@@ -263,10 +288,10 @@
 }
 
 .colourful_mobilePhone {
-  margin-left: 20%;
+  margin-left: 30%;
   opacity: 0.8;
-  height: 449.28px;
-  width: 691.2px;
+  height: 400.28px;
+  width: 660.2px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -478,7 +503,6 @@
   margin-left: -160px;
   margin-top: 80px;
   width: 110%;
-  height: 100%;
 }
 
 @media only screen and (max-width: 500px) {
