--- a/web-frontend/src/pages/exkey/exkey.css
+++ b/web-frontend/src/pages/exkey/exkey.css
@@ -45,10 +45,10 @@
 
 @media only screen and (max-width: 1500px) {
   .card-left {
-    margin-left: 23%;
+    margin-left: 11%;
   }
   .card-right {
-    margin-left: 23%;
+    margin-left: 11%;
   }
 }
 
@@ -255,7 +255,7 @@
     left: 0%;
   }
   50% {
-    left: 65%;
+    left: 30%;
   }
 
   100% {
@@ -276,9 +276,9 @@
 
 @media only screen and (max-width: 1500px) {
   .analyze_again {
-    margin-right: 70%;
-    margin-top: 10%;
-    position: static;
+    margin-left: 40%;
+    margin-top: 20%;
+    position: relative;
   }
 }
 
@@ -286,7 +286,7 @@
   .analyze_again {
     margin-left: 10%;
     margin-top: 20%;
-    position: static;
+    position: relative;
   }
 }
 
@@ -295,14 +295,33 @@
   opacity: 0.8;
   height: 400.28px;
   width: 660.2px;
+  position: relative;
 }
 
 @media only screen and (max-width: 600px) {
   .colourful_mobilePhone {
     width: 350px;
     height: 280px;
-    margin-left: -50px;
+    margin-left: 10px;
     margin-top: -30px;
+  }
+}
+
+@media only screen and (max-width: 1500px) {
+  .colourful_mobilePhone {
+    width: 700px;
+    height: 280px;
+    margin-left: 10px;
+    margin-top: 80px;
+    max-width: 50%;
+  }
+}
+
+@media only screen and (max-width: 1500px) {
+  .trend_description_align {
+    margin-left: 280px;
+    width: 50vw;
+    margin-top: -55%;
   }
 }
 
@@ -359,7 +378,7 @@
 @media only screen and (max-width: 1500px) {
   .loader_progress {
     margin-top: 160px;
-    margin-left: 450px;
+    margin-left: 30%;
   }
 }
 
@@ -446,7 +465,7 @@
     width: 0;
   }
   to {
-    width: 95%;
+    width: 100%;
   }
 }
 
@@ -515,7 +534,7 @@
 }
 
 .treeMap_align {
-  margin-left: -155px;
+  margin-left: -160px;
   margin-top: 80px;
   width: 110%;
 }
