--- a/web-frontend/src/pages/exkey/exkey.css
+++ b/web-frontend/src/pages/exkey/exkey.css
@@ -7,7 +7,7 @@
 }
 
 .body-split {
-  margin-top: 140px;
+  margin-top: 100px;
   margin-left: 80px;
 }
 
@@ -45,14 +45,14 @@
 
 @media only screen and (max-width: 1500px) {
   .card-left {
-    margin-left: 11%;
+    margin-left: 14%;
   }
   .card-right {
-    margin-left: 11%;
+    margin-left: 14%;
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 550px) {
   .card-left {
     width: 300px;
     height: 200px;
@@ -158,7 +158,7 @@
   position: absolute;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 550px) {
   .frequency_percentage {
     top: 115px;
     font-size: 1rem;
@@ -175,7 +175,7 @@
   margin-top: 120px;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 550px) {
   .frequency-bars {
     display: flex;
     margin-left: 30px;
@@ -193,7 +193,7 @@
   position: relative;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 550px) {
   .barHighlight {
     width: 13px;
     position: relative;
@@ -222,7 +222,7 @@
   bottom: 0px;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 550px) {
   .progress-percentage {
     width: 13px;
   }
@@ -243,7 +243,7 @@
   right: -5px;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 550px) {
   .barchartKeyword {
     right: 0.2px;
     font-size: 0.9rem;
@@ -255,7 +255,7 @@
     left: 0%;
   }
   50% {
-    left: 30%;
+    left: 20%;
   }
 
   100% {
@@ -276,52 +276,76 @@
 
 @media only screen and (max-width: 1500px) {
   .analyze_again {
-    margin-left: 40%;
+    margin-left: 50%;
     margin-top: 20%;
     position: relative;
   }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 550px) {
   .analyze_again {
     margin-left: 10%;
-    margin-top: 20%;
+    margin-top: 30%;
     position: relative;
+    padding-bottom: 10px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .analyze_again {
+    margin-left: 10%;
+    margin-top: 30%;
+    position: absolute;
   }
 }
 
 .colourful_mobilePhone {
-  margin-left: 30%;
+  margin-left: 10%;
+  margin-top: -8%;
   opacity: 0.8;
-  height: 400.28px;
-  width: 660.2px;
-  position: relative;
+  height: 420.28px;
+  width: 619.48px;
 }
 
 @media only screen and (max-width: 600px) {
   .colourful_mobilePhone {
-    width: 350px;
-    height: 280px;
-    margin-left: 10px;
-    margin-top: -30px;
+    width: 440px;
+    height: 350px;
+    padding-right: 50%;
   }
 }
 
 @media only screen and (max-width: 1500px) {
   .colourful_mobilePhone {
-    width: 700px;
-    height: 280px;
-    margin-left: 10px;
-    margin-top: 80px;
-    max-width: 50%;
+    width: 440px;
+    height: 350px;
+    margin-left: -30px;
+    margin-top: 10%;
   }
 }
 
 @media only screen and (max-width: 1500px) {
   .trend_description_align {
-    margin-left: 280px;
+    margin-left: 350px;
     width: 50vw;
-    margin-top: -55%;
+    max-width: 60vw;
+    margin-top: -60%;
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .trend_description_align {
+    margin-left: 10%;
+    margin-top: 50%;
+    position: static;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .trend_description_align {
+    margin-left: 10%;
+    margin-top: 50%;
+    position: static;
   }
 }
 
@@ -348,12 +372,8 @@
   }
 }
 
-/* .loader_progress {
-  top: -350px;
-  left: -60px;
-} */
 .loader_progress {
-  margin-top: 8%;
+  margin-top: 5%;
   margin-left: 30%;
   display: grid;
   grid-gap: 20px;
@@ -378,7 +398,7 @@
 @media only screen and (max-width: 1500px) {
   .loader_progress {
     margin-top: 160px;
-    margin-left: 30%;
+    margin-left: 35%;
   }
 }
 
@@ -445,7 +465,7 @@
 .loader_description {
   display: grid;
   margin-top: -20%;
-  margin-left: 10%;
+  margin-left: 20%;
   font-size: 1.8rem;
   font-weight: bold;
   overflow: hidden;
@@ -539,7 +559,7 @@
   width: 110%;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 550px) {
   .treeMap_align {
     margin-left: -100px;
     margin-top: -20px;
