--- a/web-frontend/src/pages/experiment/testcard.css
+++ b/web-frontend/src/pages/experiment/testcard.css
@@ -1,49 +1,61 @@
-article.card {
-  font-size: 0.8em;
+.menu-card {
   position: relative;
+  min-width: 300px;
+  max-width: 350px;
+  width: 40vw;
 
-  margin-top: 300px;
-  left: 50%;
-  top: 50%;
-  left: 50%;
-
-  width: 300px;
   height: 60vh;
-  transform: translate(-50%, -50%) translateZ(0);
-  border-radius: 3px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
-  overflow: hidden;
+  margin: 20px;
+  padding: 10px;
+  font-size: 0.8em;
 
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  margin-left: 20%;
+  margin-top: 100px;
+  border: 2px solid rgb(36, 36, 36);
 }
-article.card .thumb {
+
+article.startcard {
+  border: 2px solid rgb(189, 42, 42);
+  width: 100%;
+  height: 100%;
+  box-shadow: 1px 1px 10px rgb(92, 92, 92);
+  overflow: hidden;
+}
+
+article.startcard .startcard-img {
   height: 40vh;
   position: relative;
-
-  background-size: cover;
-  border-radius: 3px;
+  border: 2px solid rgb(42, 64, 189);
 }
-article.card .infos {
+.startcard-menu-img {
+  border: 2px solid rgb(233, 132, 132);
+  position: absolute;
+  min-width: 100px;
+  max-width: 200px;
+  width: 20vw;
+  top: 10%;
+  left: 70px;
+}
+
+article.startcard .startcard-info {
   width: auto;
-  height: 60vh;
-  position: relative;
+  height: 65vh;
   padding: 14px 24px;
   background: rgb(235, 234, 234);
-  transition: 0.4s 0.15s cubic-bezier(0.17, 0.67, 0.5, 1.03);
+  transition: 0.5s 0.15s;
 }
-article.card .infos .title {
+article.startcard .startcard-info .startcard-title {
   position: relative;
-  margin: 10px 0;
+  font-size: 2.5em;
+  text-transform: uppercase;
   letter-spacing: 3px;
   color: #000000;
   font-family: 'Grotesque Black', sans-serif;
-  font-size: 2.5em;
-  text-transform: uppercase;
-  text-shadow: 0 0 0px #32577f;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
+  padding-bottom: 5px;
+  border-bottom: 2px solid rgb(36, 36, 36);
 }
 
-article.card .infos .seats {
+article.startcard .startcard-info .startcard-sub-title {
   position: relative;
   margin: 10px 0;
   letter-spacing: 3px;
@@ -52,19 +64,14 @@ article.card .infos .seats {
   font-size: 1.5em;
   text-shadow: 0 0 0px #32577f;
 }
-article.card .infos .seats {
+article.startcard .startcard-info .startcard-sub-title {
   display: inline-block;
 
   opacity: 1;
   transition: 0.5s 0.25s cubic-bezier(50, 100, 100, 100);
 }
-.menu-img {
-  position: absolute;
-  width: 200px;
-  top: 10%;
-  left: 15%;
-}
-article.card .infos .txt {
+
+article.startcard .startcard-info .startcard-text {
   font-family: 'Merriweather', sans-serif;
 
   font-size: 1.5rem;
@@ -74,11 +81,11 @@ article.card .infos .txt {
   transition: 0.5s 0.25s cubic-bezier(50, 100, 100, 100);
 }
 
-article.card .infos .details-div {
+article.startcard .startcard-info .startcard-start {
   text-align: right;
 }
 
-article.card .infos .details {
+article.startcard .startcard-info .startcard-start-btn {
   position: relative;
 
   margin: 10px 0;
@@ -93,11 +100,11 @@ article.card .infos .details {
   transition: 0.5s 0.25s cubic-bezier(50, 100, 100, 100);
 }
 
-article.card:hover .infos {
+article.startcard:hover .startcard-info {
   transform: translateY(-20vh);
 }
-article.card:hover .infos .seats,
-article.card:hover .infos .txt,
-article.card:hover .infos .details {
+article.startcard:hover .startcard-info .startcard-sub-title,
+article.startcard:hover .startcard-info .startcard-text,
+article.startcard:hover .startcard-info .startcard-start-btn {
   opacity: 1;
 }
