--- a/web-frontend/src/pages/experiment/testcard.css
+++ b/web-frontend/src/pages/experiment/testcard.css
@@ -1,4 +1,4 @@
-.menu-card {
+/* .menu-card {
   position: relative;
   min-width: 300px;
   max-width: 350px;
@@ -115,4 +115,4 @@ article.startcard:hover .startcard-info .startcard-sub-title,
 article.startcard:hover .startcard-info .startcard-text,
 article.startcard:hover .startcard-info .startcard-start-btn {
   opacity: 1;
-}
+} */
