home start contetnt updated

--- a/web-frontend/src/components/menucard/menucard.css
+++ b/web-frontend/src/components/menucard/menucard.css
@@ -62,7 +62,7 @@ article.startcard .startcard-info .startcard-sub-title {
   position: relative;
   margin: 10px 0;
   letter-spacing: 3px;
-  color: #2a2a2a;
+  color: #3f3f3f;
   font-family: 'Grotesque Black', sans-serif;
   font-size: 1.5em;
   text-shadow: 0 0 0px #32577f;
