logo position fixed

--- a/web-frontend/src/components/logobanner/logobanner.css
+++ b/web-frontend/src/components/logobanner/logobanner.css
@@ -4,7 +4,7 @@
   position: relative;
   width: auto;
   height: auto;
-  margin: 2vw 0vw 0vw 20px;
+  margin: 2vw 0vw 0vw 2vw;
   display: flex;
   align-items: center;
 }
