--- a/web-frontend/src/pages/exkey/exkey.css
+++ b/web-frontend/src/pages/exkey/exkey.css
@@ -2,12 +2,31 @@
   top: 0%;
   left: 0%;
   margin: 0%;
-  height: 100vh;
+  height: auto;
+}
+
+@media only screen and (max-width: 600px) {
+  .heading_align {
+    margin-left: 10%;
+    /* width: 100%; */
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .heading_align {
+    margin-left: 10%;
+  }
 }
 
 .body-split {
   margin-top: -60px;
   margin-left: 80px;
+}
+
+@media only screen and (max-width: 600px) {
+  .body-split {
+    margin-top: -20%;
+  }
 }
 
 .card-heading-name-left {
@@ -44,10 +63,10 @@
 
 @media only screen and (max-width: 1500px) {
   .card-left {
-    margin-left: 18%;
+    margin-left: 24%;
   }
   .card-right {
-    margin-left: 18%;
+    margin-left: 24%;
   }
 }
 
@@ -55,17 +74,29 @@
   .card-left {
     width: 300px;
     height: 200px;
-    margin-left: 10px;
+    margin-left: 5px;
     margin-top: 30px;
   }
   .card-right {
     width: 300px;
     height: 200px;
-    margin-left: 10px;
-    margin-top: -10px;
+    margin-left: 5px;
+    margin-top: -15%;
     padding-bottom: 5%;
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .card-right {
+    width: 300px;
+    height: 200px;
+    margin-left: 5px;
+    margin-top: -1%;
+    padding-bottom: 5%;
+    position: static;
+  }
+}
+
 .card-topic {
   margin-left: -7%;
 }
@@ -77,9 +108,8 @@
 
 @media only screen and (max-width: 600px) {
   .otherKeywords_description {
-    margin-left: 20%;
+    margin-left: 10%;
     margin-top: -10%;
-    font-size: -10px;
     width: 100%;
   }
 }
@@ -193,7 +223,7 @@
 
 @media only screen and (max-width: 600px) {
   .barchartKeyword {
-    right: 0.2px;
+    left: 0.9px;
     font-size: 0.9rem;
   }
 }
@@ -235,16 +265,16 @@
   .analyze_again {
     margin-left: 10%;
     margin-top: 30%;
-    position: relative;
-    padding-bottom: 10px;
+    position: static;
+    margin-top: 10%;
   }
 }
 
 @media only screen and (max-width: 500px) {
   .analyze_again {
     margin-left: 10%;
-    margin-top: 10%;
-    position: absolute;
+    margin-top: 15%;
+    position: static;
   }
 }
 
@@ -260,6 +290,7 @@
   .colourful_mobilePhone {
     width: 440px;
     height: 350px;
+    margin-top: 10%;
   }
 }
 
@@ -289,15 +320,17 @@
 @media only screen and (max-width: 600px) {
   .trend_description_align {
     margin-left: 10%;
-    margin-top: 10%;
+    margin-top: -5%;
     position: static;
+    width: 120%;
+    max-width: 220%;
   }
 }
 
 @media only screen and (max-width: 500px) {
   .trend_description_align {
-    margin-left: 10%;
-    margin-top: 20%;
+    margin-left: -10%;
+    margin-top: -5%;
     position: static;
   }
 }
@@ -318,13 +351,27 @@
 
 @media screen and (max-width: 600px) {
   .analysing_banner {
+    width: 30%;
+    opacity: 0.8;
+    display: flex;
+    flex-wrap: wrap;
+    position: static;
+    margin-left: -10%;
+    margin-top: -35%;
+    padding-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .analysing_banner {
     opacity: 0.8;
     display: flex;
     flex-wrap: wrap;
     position: absolute;
     margin-left: -30%;
-    margin-top: 5%;
+    margin-top: -5%;
     padding-bottom: 10px;
+    height: 10%;
   }
 }
 
@@ -348,6 +395,14 @@
     width: 244.8px;
     height: 244.8px;
     margin-top: 10%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .process_gif {
+    width: 244.8px;
+    height: 244.8px;
+    margin-top: 90%;
   }
 }
 
@@ -387,9 +442,8 @@
 @media only screen and (max-width: 600px) {
   .loader_description {
     margin-left: 20px;
-    margin-top: 40%;
-    position: static;
-    width: 120%;
+    margin-top: 60%;
+    position: absolute;
   }
 }
 
@@ -410,8 +464,8 @@
 
 @media only screen and (max-width: 600px) {
   .treeMap_align {
-    margin-left: -100px;
-    margin-top: -10px;
+    margin-left: -95px;
+    margin-top: -15px;
     width: 140%;
     height: 40%;
   }
