--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -840,7 +840,7 @@ button.signup-btn {
 
 /* Content */
 .content-padding {
-  padding-left: 120px;
+  padding-left: 150px;
   padding-right: 300px;
 }
 .heading2-sep-margin {
@@ -919,7 +919,8 @@ select.uras-sort {
 }
 @media only screen and (max-width: 1500px) {
   .content-padding {
-    padding-right: 120px;
+    /* padding-right: 120px; */
+    padding-right: 150px;
   }
 }
 @media only screen and (max-width: 1400px) {
