--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -841,7 +841,8 @@ button.signup-btn {
 /* Content */
 .content-padding {
   padding-left: 150px;
-  padding-right: 300px;
+  /* padding-right: 300px; */
+  padding-right: 150px;
 }
 .heading2-sep-margin {
   margin-bottom: 15px !important;
