--- a/web-frontend/src/App.css
+++ b/web-frontend/src/App.css
@@ -843,6 +843,9 @@ button.signup-btn {
   padding-left: 150px;
   padding-right: 300px;
 }
+.content-padding-right-small {
+  padding-right: 150px !important;
+}
 .heading2-sep-margin {
   margin-bottom: 15px !important;
 }
@@ -922,6 +925,10 @@ select.uras-sort {
     /* padding-right: 120px; */
     padding-right: 150px;
   }
+
+  .content-padding-right-small {
+    padding-right: 150px !important;
+  }
 }
 @media only screen and (max-width: 1400px) {
   .feature-selection-banner {
@@ -940,6 +947,9 @@ select.uras-sort {
     padding-right: 100px;
     padding-left: 100px;
   }
+  .content-padding-right-small {
+    padding-right: 100px !important;
+  }
 }
 @media only screen and (max-width: 1200px) {
   .page {
@@ -949,11 +959,17 @@ select.uras-sort {
     padding-right: 100px;
     padding-left: 100px;
   }
+  .content-padding-right-small {
+    padding-right: 100px !important;
+  }
 }
 @media only screen and (max-width: 1000px) {
   .content-padding {
     padding-right: 80px;
     padding-left: 80px;
+  }
+  .content-padding-right-small {
+    padding-right: 80px !important;
   }
 }
 @media only screen and (max-width: 850px) {
@@ -980,6 +996,9 @@ select.uras-sort {
     padding-right: 80px;
     padding-left: 80px;
   }
+  .content-padding-right-small {
+    padding-right: 80px !important;
+  }
 }
 @media only screen and (max-width: 750px) {
   .feature-types-selection-menu .feature-type-heading {
@@ -995,6 +1014,9 @@ select.uras-sort {
   .content-padding {
     padding-right: 40px;
     padding-left: 40px;
+  }
+  .content-padding-right-small {
+    padding-right: 40px !important;
   }
   html {
     font-size: 9px;
