nav style bug fix

--- a/web-frontend/src/components/nav/nav.css
+++ b/web-frontend/src/components/nav/nav.css
@@ -246,6 +246,7 @@ img.dropdown-arrow {
   text-decoration: none;
   margin-bottom: 2px;
   transition: 200ms ease;
+  overflow: hidden;
 }
 
 .nav-link:last-child {
