--- a/web-frontend/src/pages/exkey/exkey.css
+++ b/web-frontend/src/pages/exkey/exkey.css
@@ -101,15 +101,6 @@
   }
 }
 
-@media only screen and (max-width: 15px) {
-  .card-left {
-    margin-left: 14%;
-  }
-  .card-right {
-    margin-left: 24%;
-  }
-}
-
 @media only screen and (max-width: 600px) {
   .card-left {
     width: 300px;
@@ -126,7 +117,28 @@
   }
 }
 
-@media only screen and (max-width: 500px) {
+@media screen and (min-width: 1600px) {
+  .card-left {
+    margin-top: 15%;
+    margin-left: 8%;
+  }
+  .card-right {
+    margin-top: 15%;
+    margin-left: 1%;
+  }
+}
+
+@media screen and (min-width: 1900px) {
+  .card-left {
+    margin-top: 15%;
+    margin-left: 10%;
+  }
+  .card-right {
+    margin-top: 15%;
+    margin-left: 1%;
+  }
+}
+/* @media only screen and (max-width: 500px) {
   .card-right {
     width: 300px;
     height: 200px;
@@ -135,7 +147,7 @@
     padding-bottom: 5%;
     position: static;
   }
-}
+} */
 
 .card-topic {
   margin-left: -7%;
@@ -375,6 +387,22 @@
     opacity: 0.8;
     width: 90%;
     margin-top: -1%;
+    margin-left: 10%;
+  }
+}
+
+@media screen and (min-width: 1900px) {
+  .trend_description_align {
+    max-width: 80%;
+    float: right;
+    margin-top: 34%;
+    margin-left: -10%;
+  }
+
+  .analysing_banner {
+    opacity: 0.8;
+    width: 90%;
+    margin-top: 10%;
     margin-left: 10%;
   }
 }
