--- a/web-frontend/src/pages/exkey/exkey.css
+++ b/web-frontend/src/pages/exkey/exkey.css
@@ -79,7 +79,7 @@
   margin-left: 10%;
 }
 
-/* @media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 1100px) {
   .card-left {
     width: 500px;
     height: 300px;
@@ -90,7 +90,22 @@
     height: 300px;
     margin-left: 14%;
   }
-} */
+}
+
+@media only screen and (max-width: 800px) {
+  .card-left {
+    width: 400px;
+    height: 300px;
+    margin-left: 14%;
+    margin-top: 10%;
+  }
+  .card-right {
+    width: 400px;
+    height: 300px;
+    margin-left: 14%;
+    margin-top: -1%;
+  }
+}
 
 @media only screen and (max-width: 1500px) {
   .card-left {
@@ -119,11 +134,11 @@
 
 @media screen and (min-width: 1600px) {
   .card-left {
-    margin-top: 15%;
+    margin-top: 10%;
     margin-left: 8%;
   }
   .card-right {
-    margin-top: 15%;
+    margin-top: 10%;
     margin-left: 1%;
   }
 }
@@ -131,11 +146,22 @@
 @media screen and (min-width: 1900px) {
   .card-left {
     margin-top: 15%;
-    margin-left: 10%;
+    margin-left: 7%;
   }
   .card-right {
     margin-top: 15%;
-    margin-left: 1%;
+    margin-left: -10%;
+  }
+}
+
+@media screen and (min-width: 2300px) {
+  .card-left {
+    margin-top: 15%;
+    margin-left: 7%;
+  }
+  .card-right {
+    margin-top: 15%;
+    margin-left: 10%;
   }
 }
 /* @media only screen and (max-width: 500px) {
@@ -274,33 +300,6 @@
   right: -5px;
 }
 
-@media only screen and (max-width: 600px) {
-  .frequency_percentage {
-    top: 115px;
-    font-size: 1rem;
-  }
-  .frequency-bars {
-    display: flex;
-    margin-left: 30px;
-    margin-top: 30px;
-    margin-right: 0px;
-    flex-wrap: nowrap;
-  }
-  .barHighlight {
-    width: 13px;
-    position: relative;
-    margin-right: 15px;
-    height: 110px;
-  }
-  .progress-percentage {
-    width: 13px;
-  }
-  .barchartKeyword {
-    left: 0.9px;
-    font-size: 0.9rem;
-  }
-}
-/* 
 @media only screen and (max-width: 1100px) {
   .frequency-bars {
     display: flex;
@@ -327,7 +326,62 @@
     left: 3px;
     font-size: 0.9rem;
   }
-} */
+}
+
+@media only screen and (max-width: 800px) {
+  .frequency-bars {
+    display: flex;
+    margin-left: 40px;
+    margin-top: 120px;
+    margin-right: 15px;
+    flex-wrap: nowrap;
+    max-width: auto;
+  }
+  .frequency_percentage {
+    top: 115px;
+    font-size: 1rem;
+  }
+  .barHighlight {
+    width: 20px;
+    position: relative;
+    margin-right: 18px;
+    height: 110px;
+  }
+  .progress-percentage {
+    width: 20px;
+  }
+  .barchartKeyword {
+    left: 3px;
+    font-size: 0.9rem;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .frequency_percentage {
+    top: 115px;
+    font-size: 1rem;
+  }
+  .frequency-bars {
+    display: flex;
+    margin-left: 30px;
+    margin-top: 30px;
+    margin-right: 0px;
+    flex-wrap: nowrap;
+  }
+  .barHighlight {
+    width: 13px;
+    position: relative;
+    margin-right: 15px;
+    height: 110px;
+  }
+  .progress-percentage {
+    width: 13px;
+  }
+  .barchartKeyword {
+    left: 0.9px;
+    font-size: 0.9rem;
+  }
+}
 
 @keyframes startbtn-effect_analyzeAgain {
   0% {
@@ -345,7 +399,7 @@
 .analyze_again {
   display: block;
   animation-name: startbtn-effect_analyzeAgain;
-  animation-duration: 3s;
+  animation-duration: 1.8s;
   animation-iteration-count: 1;
   position: relative;
   margin-top: 13%;
@@ -377,7 +431,7 @@
 
 @media only screen and (max-width: 1500px) {
   .trend_description_align {
-    max-width: 80%;
+    max-width: 70%;
     float: right;
     margin-top: 15%;
     margin-left: -10%;
@@ -393,23 +447,23 @@
 
 @media screen and (min-width: 1600px) {
   .trend_description_align {
-    max-width: 80%;
+    max-width: 70%;
     float: right;
-    margin-top: 34%;
+    margin-top: 24%;
     margin-left: -10%;
   }
 
   .analysing_banner {
     opacity: 0.8;
     width: 90%;
-    margin-top: 10%;
+    margin-top: 5%;
     margin-left: 10%;
   }
 }
 
 @media screen and (min-width: 1900px) {
   .trend_description_align {
-    max-width: 80%;
+    max-width: 70%;
     float: right;
     margin-top: 34%;
     margin-left: -10%;
@@ -563,6 +617,23 @@
   width: 110%;
 }
 
+@media only screen and (max-width: 1100px) {
+  .treeMap_align {
+    margin-left: -110px;
+    margin-top: -20px;
+    width: 110%;
+    height: 20%;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .treeMap_align {
+    margin-left: -128px;
+    margin-top: -25px;
+    width: 140%;
+    height: 40%;
+  }
+}
+
 @media only screen and (max-width: 600px) {
   .treeMap_align {
     margin-left: -95px;
@@ -571,15 +642,6 @@
     height: 40%;
   }
 }
-
-/* @media only screen and (max-width: 1100px) {
-  .treeMap_align {
-    margin-left: -110px;
-    margin-top: -20px;
-    width: 110%;
-    height: 20%;
-  }
-} */
 
 @keyframes fadeIn {
   0% {
