--- a/web-frontend/src/components/menucard/menucard.css
+++ b/web-frontend/src/components/menucard/menucard.css
@@ -26,8 +26,10 @@
 article.startcard {
   width: 100%;
   height: 100%;
-  box-shadow: 2px 2px 10px var(--primary-border-grey);
+  /* box-shadow: 2px 2px 10px var(--primary-border-grey); */
+  border: 1px solid var(--primary-border-grey);
   overflow: hidden;
+  border-radius: 10px;
 }
 
 article.startcard .startcard-img {
@@ -50,7 +52,10 @@ article.startcard .startcard-info {
   height: 60vh;
   padding: 12px 22px;
   background: rgb(228, 228, 228);
-  box-shadow: 0px 1px 5px rgb(44, 44, 44);
+  /* box-shadow: 0px 1px 5px rgb(44, 44, 44); */
+  border: 1px solid var(--primary-border-grey);
+  border-right: 0px;
+  border-left: 0px;
   transition: 0.6s 0.2s;
 }
 
